--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 
- <p>Hola Mundo</p>
+ <!-- <p>Hola Mundo</p>
 
  <div>
   <h1>{{title}}</h1>
@@ -14,11 +14,15 @@
 
  <div>{{pelicula.titulo}}</div>
  <div>{{pelicula.anio}}</div>
- <div>{{pelicula.genero}}</div>
+ <div>{{pelicula.genero}}</div> -->
+
+ <app-heroes-list></app-heroes-list>
+
+ <router-outlet />
 
 </div>
 
 
-<router-outlet />
+
 
 
