--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,9 @@
  <div>{{pelicula.anio}}</div>
  <div>{{pelicula.genero}}</div> -->
 
- <app-heroes-list></app-heroes-list>
+ <!--<app-heroes-list></app-heroes-list>-->
+
+ <app-operas-bas/>
 
  <router-outlet />
 
