--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,10 @@
 
  <!--<app-heroes-list></app-heroes-list>-->
 
- <app-operas-bas/>
+ <!--<app-operas-bas/>-->
+
+  <app-cinepolis/>
+  <!--<app-resistencia/>-->
 
  <router-outlet />
 
