--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,9 @@
 
  <!--<app-operas-bas/>-->
 
-  <app-cinepolis/>
-  <!--<app-resistencia/>-->
+ <!-- <app-cinepolis/>-->
+  <app-resistencia/>
+ <!-- <app-distancia/>-->
 
  <router-outlet />
 
